--- a/tractags/templates/admin_tag_change.html
+++ b/tractags/templates/admin_tag_change.html
@@ -6,6 +6,12 @@
       xmlns:xi="http://www.w3.org/2001/XInclude"
       xmlns:i18n="http://genshi.edgewall.org/i18n"
       i18n:domain="tractags">
+  <!--!
+    Copyright (C) 2011-2013 Steffen Hoffmann <hoff.st@web.de>
+
+    This software is licensed as described in the file COPYING, which
+    you should have received as part of this distribution.
+  -->
   <xi:include href="admin.html" />
   <?python
     from tractags.api import _ ?>
