--- a/tractags/templates/listtagged_results.html
+++ b/tractags/templates/listtagged_results.html
@@ -1,4 +1,10 @@
 <!--!
+  Copyright (C) 2011,2012 Steffen Hoffmann <hoff.st@web.de>
+
+  This software is licensed as described in the file COPYING, which
+  you should have received as part of this distribution.
+-->
+<!--!
        headers   - a sequence of header structure:
                      .label    - what to display for this header
 
